implement filter by category

--- a/src/app/components/event-details/event-details.component.html
+++ b/src/app/components/event-details/event-details.component.html
@@ -37,7 +37,7 @@
             </div>
           </div>
         </div> 
-        <div *ngIf="userRole=='admin'" class="row">
+        <div *ngIf="userGroup=='manager'" class="row">
           <div class="col-3">
             <button class="btn btn-info w-100" (click)="onEditEvent()">Edit Event</button>
           </div>
