--- a/src/app/components/event-form/event-form.component.scss
+++ b/src/app/components/event-form/event-form.component.scss
@@ -16,3 +16,66 @@ i{
     border: none;
     color:white;
 }
+
+
+
+.mat-stepper-horizontal {
+    margin-top: 8px;
+  }
+  
+  .mat-form-field {
+    margin-top: 16px;
+  }
+
+  .example-chip-list {
+    width: 100%;
+  }
+  i{
+    font-size: 1.2rem;
+    cursor: pointer;
+  }
+
+
+  
+
+  .bi-image{
+    font-size: 3rem;
+  }
+  .uploadOuter {
+    text-align: center;
+    padding: 20px;
+    strong {
+      padding: 0 10px
+    }
+  }
+  .dragBox {
+    width: 15rem;
+    height: 10rem;
+    // margin: 0 auto;
+    position: relative;
+    text-align: center;
+    // font-weight: bold;
+    line-height: 40px;
+    color: #999;
+    border: 2px dashed #ccc;
+    display: inline-block;
+    transition: transform 0.3s;
+    input[type="file"] {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      opacity: 0;
+      top: 0;
+      left: 0;
+    }
+  }
+  .draging {
+    transform: scale(1.1);
+  }
+  #preview {
+    text-align: center;
+    img {
+      max-width: 100%
+    }
+  }
+
