--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -115,7 +115,7 @@
   <div class="navbar-nav ml-auto">
     <a routerLink="/initial" class="nav-item nav-link icons" routerLinkActive="active"><i class="bi bi-house-heart-fill"></i><span>Home</span></a>
     <a routerLink="/orders" routerLinkActive="active" ariaCurrentWhenActive="page" class="nav-item nav-link"><i class="bi bi-receipt"></i><span>Orders</span></a>
-    <a routerLink="/chat" routerLinkActive="active" class="nav-item nav-link" ><i class="bi bi-chat-text-fill"></i><span>Messages</span></a>
+    <a  *ngIf="userGroup == 'manager'"     (click)="onCreateEvent()"   routerLinkActive="active" class="nav-item nav-link" ><i class="bi bi-chat-text-fill"></i><span>Create Event</span></a>
 
     <mat-menu #messageBox="matMenu" xPosition="before">
       <h6 class="dropdown-header">Message Center</h6>
