--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
               <mat-tab>
                 <ng-template mat-tab-label>
                   <mat-icon class="example-tab-icon mr-1">rocket</mat-icon>
-                  <span>Concert</span>
+                  <span>All Events</span>
                 </ng-template>
                 <div>
                   <div class="pt-3"></div>
@@ -16,7 +16,7 @@
               <mat-tab>
                 <ng-template mat-tab-label>
                   <mat-icon class="example-tab-icon mr-1">local_fire_department</mat-icon>
-                  <span>Sports</span>
+                  <span>Concert</span>
                 </ng-template>
                 <div>
                   <div class="pt-3"></div>
@@ -25,7 +25,7 @@
               <mat-tab>
                 <ng-template mat-tab-label>
                   <mat-icon class="example-tab-icon mr-1">arrow_upward</mat-icon>
-                  <span>Art & Theater</span>
+                  <span>Sport</span>
                 </ng-template>
                 <div>
                   <div class="pt-3"></div>
@@ -34,7 +34,7 @@
               <mat-tab>
                 <ng-template mat-tab-label>
                   <mat-icon class="example-tab-icon mr-1">today</mat-icon>
-                  <span class="btn-tab">More</span>
+                  <span class="btn-tab">Art & Theater</span>
                 </ng-template>
                 <div>
                   <div class="pt-3"></div>
@@ -78,7 +78,7 @@
  </div>
 
 <div class="container pt-4" [class.border]="isShow">
-    <app-event-list [eventList]="events"></app-event-list>
+    <app-event-list [eventList]="events "></app-event-list>
   </div>
 
 
