--- a/src/app/components/event-details/event-details.component.html
+++ b/src/app/components/event-details/event-details.component.html
@@ -29,6 +29,8 @@
           </div>
           <div class="col-4">
         <app-buy-ticket [event]="event"></app-buy-ticket> 
+        <button mat-raised-button color="primary" [routerLink]="['/checkout']">Buy Ticket</button>
+
           </div>
         </div> 
         <div *ngIf="userGroup=='manager'" class="row">
