--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,11 +2,11 @@
 
           <div  class="container pt-4">
 
-            <mat-tab-group animationDuration="0ms" mat-stretch-tabs>
+            <mat-tab-group animationDuration="0ms" mat-stretch-tabs (selectedTabChange)="SetTabIndex($event)">
               <mat-tab>
                 <ng-template mat-tab-label>
                   <mat-icon class="example-tab-icon mr-1">rocket</mat-icon>
-                  <span>Concert</span>
+                  <span>All Events</span>
                 </ng-template>
                 <div>
                   <div class="pt-3"></div>
@@ -16,28 +16,29 @@
               <mat-tab>
                 <ng-template mat-tab-label>
                   <mat-icon class="example-tab-icon mr-1">local_fire_department</mat-icon>
-                  <span>Sports</span>
+                  <span>Concert</span>
                 </ng-template>
-                <!-- <div style="padding: 0 6%">
-                  <div class="">
-                  </div>
-                </div> -->
+                <div>
+                  <div class="pt-3"></div>
+                </div>
               </mat-tab>
               <mat-tab>
                 <ng-template mat-tab-label>
                   <mat-icon class="example-tab-icon mr-1">arrow_upward</mat-icon>
-                  <span>Art & Theater</span>
+                  <span>Sport</span>
                 </ng-template>
-                <div style="padding: 0 6%">
-                  <div class="">
-                  </div>
+                <div>
+                  <div class="pt-3"></div>
                 </div>
               </mat-tab>
               <mat-tab>
                 <ng-template mat-tab-label>
                   <mat-icon class="example-tab-icon mr-1">today</mat-icon>
-                  <span class="btn-tab">More</span>
+                  <span class="btn-tab">Art & Theater</span>
                 </ng-template>
+                <div>
+                  <div class="pt-3"></div>
+                </div>
               </mat-tab>
             </mat-tab-group>
           </div>
@@ -77,7 +78,7 @@
  </div>
 
 <div class="container pt-4" [class.border]="isShow">
-    <app-event-list [eventList]="events"></app-event-list>
+    <app-event-list [eventList]="events "></app-event-list>
   </div>
 
 
