--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,21 @@
+<!-- <div class="container pt-5 mt-5 cognitoform">
+  <amplify-authenticator [loginMechanisms]="['email']"
+  [signUpAttributes]="[  'name',  'email',  'family_name' ]"
+  [socialProviders]="['google']">
+    <ng-template
+    amplifySlot="authenticated"
+    let-user="user"
+    let-signOut="signOut">
+    <div  *ngIf="user?.signInUserSession?.accessToken?.payload['cognito:groups'][0]=='manager'">
+       {{onCheckRoute('manager')?onCheckRoute('manager'):""}}
+    </div> -->
+    <!-- <div *ngIf="this.authenticator?.user">
+      {{onCheckRoute('home')?onCheckRoute('home'):""}}
+    </div > -->
+    <!-- </ng-template>
+  </amplify-authenticator>
+</div>
+  -->
 <div class="container pt-5 mt-5 cognitoform">
   <amplify-authenticator [loginMechanisms]="['email']"
   [signUpAttributes]="[  'name',  'email',  'family_name' ]"
@@ -6,16 +24,17 @@
     amplifySlot="authenticated"
     let-user="user"
     let-signOut="signOut">
-    <div  *ngIf="user.signInUserSession.accessToken.payload['cognito:groups'][0]=='manager'">
+    <div *ngIf="user?.signInUserSession?.accessToken?.payload['cognito:groups']?.[0]=='manager'">
        {{onCheckRoute('manager')?onCheckRoute('manager'):""}}
     </div>
-    <div *ngIf="user.signInUserSession.accessToken.payload['cognito:groups'][0]=='user'">
+    <div *ngIf="!user?.signInUserSession?.accessToken?.payload['cognito:groups']">
       {{onCheckRoute('user')?onCheckRoute('user'):""}}
     </div >
     </ng-template>
   </amplify-authenticator>
 </div>
- 
+
+
 <!-- https://docs.amplify.aws/lib/auth/social/q/platform/js/#configure-auth-category -->
 
 <!-- <amplify-authenticator>
