getting ticket from one place to another

--- a/src/app/components/event-details/event-details.component.html
+++ b/src/app/components/event-details/event-details.component.html
@@ -28,8 +28,8 @@
           </ul>
           </div>
           <div class="col-4">
-        <app-buy-ticket [event]="event"></app-buy-ticket> 
-        <button mat-raised-button color="primary" [routerLink]="['/checkout']">Buy Ticket</button>
+        <app-buy-ticket [event]="event" ></app-buy-ticket> 
+        <!-- <button mat-raised-button color="primary" [routerLink]="['/checkout']">Buy Ticket</button> -->
 
           </div>
         </div> 
