--- a/src/app/components/buy-ticket/buy-ticket.component.html
+++ b/src/app/components/buy-ticket/buy-ticket.component.html
@@ -2,3 +2,5 @@
 <div class="col-4" *ngFor="let ticket of event?.tickets">
     <app-ticket [ticket]="ticket" (totalPriceChange)="onTotalPriceChange($event)"></app-ticket> 
 </div>
+
+<button mat-raised-button color="primary" (click)="onCheckout()">Buy Ticket</button>
