--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -12,22 +12,21 @@
   <mat-card *ngIf="!authenticator.user" class="mt-5">
     <mat-card-content>
       <div class="d-flex align-items-center">
-        <img src="/assets/images/easyeventlogo.png" width="180" height="180" alt="CloneBrite" class="img-fluid"/>
+        <!-- <img src="/assets/images/easyeventlogo.png" width="180" height="180" alt="CloneBrite" class="img-fluid"/> -->
         <span>Please <a routerLink="/login">log in</a> or create an account in EasyEvent to purchase this ticket.</span>
       </div>
     </mat-card-content>
   </mat-card>
 
-  <div *ngIf="authenticator.user" class="pt-5">
-    <div *ngFor="let item of ticketsSelected">
-        <div *ngFor="let i of createArrayFromQuantity(item.quantity)">
-          <app-user-ticket [ticket]="item.ticket" [index]="i.index"></app-user-ticket>
-        </div>
+  <form [formGroup]="orderForm" (ngSubmit)="onSubmit()">
+    <div *ngIf="authenticator.user">
+      <div *ngFor="let item of ticketsSelected">
+          <div *ngFor="let i of createArrayFromQuantity(item.quantity)">
+            <app-user-ticket [ticket]="item.ticket"  #userTicket></app-user-ticket>
+          </div>
+      </div>
     </div>
-  </div>
-  <div class="col-6 d-flex justify-content-end">
-    <button mat-button class="btn btn-primary" mat-button (click)="onSubmit()">Make the payment</button>
-  </div>
-  
+    <div class="mt-5">
+      <button  class="btn btn-primary">Submit</button>
+    </div>
 
-</div>
