--- a/src/app/components/user-ticket/user-ticket.component.html
+++ b/src/app/components/user-ticket/user-ticket.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="ticketUserOwner" (ngSubmit)="onSubmit()">
-  <div class="container pt-4">
+  <div class="container pt-4 row">
     <h3>Ticket date: 15.07 | {{ticket?.title}}     #{{index}}</h3>
-    <div class="row col-6" >
+    <div class="row col-12" >
       <div class="col-6">
         <h3><strong>Please insert the owner of this ticket:</strong></h3>
       </div>
@@ -12,7 +12,7 @@
     </div>
 
     <div class="row">
-      <div class="col-3">
+      <div class="col-6">
         <mat-form-field class="example-full-width" appearance="outline">
           <mat-label>Name</mat-label>
           <input matInput id="contactNumber" type="text" formControlName="username">
@@ -22,7 +22,7 @@
         </mat-form-field>
       </div>
 
-      <div class="col-3">
+      <div class="col-6">
         <mat-form-field class="example-full-width" appearance="outline">
           <mat-label>Surname</mat-label>
           <input matInput id="surname" type="text" formControlName="surname">
@@ -33,7 +33,7 @@
     </div>
 
     <div class="row">
-      <div class="col-6">
+      <div class="col-12">
         <mat-form-field class="example-full-width" appearance="outline">
           <mat-label>Email</mat-label>
           <input matInput formControlName="email">
@@ -41,19 +41,21 @@
       </div>
     </div>
 
-    <label id="example-radio-group-label">Gender:</label>
-    <mat-radio-group aria-labelledby="example-radio-group-label" formControlName="gender"
-      class="example-radio-group">
-      <mat-radio-button value="male">Male</mat-radio-button>
-      <mat-radio-button value="female">Female</mat-radio-button>
-      <mat-radio-button value="nonbinary">Non-binary</mat-radio-button>
-      <mat-radio-button value="other">Other</mat-radio-button>
-    </mat-radio-group>
-  </div>
-
-  <div class="container">
     <div class="row">
-      <div class="col-6">
+      <div class="col-12">
+        <mat-form-field appearance="outline">
+          <mat-label>County</mat-label>
+          <select matNativeControl formControlName="county" #county>
+            <option value="">Select County</option>
+            <option *ngFor="let county of counties" [value]="county">{{ county }}</option>
+          </select>
+        </mat-form-field>
+      </div>
+    </div>
+    
+
+    <div class="row ">
+      <div class="col-12 mb-2 pb-2">
         <mat-form-field appearance="outline">
           <mat-label>DOB</mat-label>
           <input matInput [matDatepicker]="eventDateEnds" formControlName="dob">
@@ -62,10 +64,9 @@
           <mat-datepicker #eventDateEnds></mat-datepicker>
         </mat-form-field>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="col-6">
+    <!-- <div class="row">
+      <div class="col-12">
         <div class="form-group">
           <label for="exampleFormControlSelect1"></label>
           <select class="form-control" formControlName="county" #county>
@@ -74,7 +75,25 @@
           </select>
         </div>
       </div>
-    </div>
+    </div> -->
+
+    <label id="example-radio-group-label" >Gender:</label>
+    <mat-radio-group aria-labelledby="example-radio-group-label" formControlName="gender"
+      class="example-radio-group">
+      <mat-radio-button value="male">Male</mat-radio-button>
+      <mat-radio-button value="female">Female</mat-radio-button>
+      <mat-radio-button value="nonbinary">Non-binary</mat-radio-button>
+      <mat-radio-button value="other">Other</mat-radio-button>
+    </mat-radio-group>
+
+    
+  </div>
+<div class="pt-2 pb-2">
+  <hr/>
+
+</div>
+
+ 
   </div>
   
 </form>
