--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -93,7 +93,7 @@
           </li>
           <li class="list-group-item d-flex justify-content-between">
             <span class="text-muted">VAT (23%)</span>
-            <span class="text-muted">{{totalAmount * 0.23}}</span>
+            <span class="text-muted">{{(totalAmount * 0.23) | number:'1.2-2'}}</span>
           </li>
           <li class="list-group-item d-flex justify-content-between">
             <span>Total (EUR)</span>
